# autonomous-qa-triage

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  ROADMAP.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  prometheus.yml  pyproject.toml
.claude/agents/: ai-agent-architect.md  code-implementation-specialist.md  database-infrastructure-specialist.md  dev-ops-engineer.md  strategic-task-planner.md  testing-qa-expert.md  ui-design-specialist.md
.github/workflows/: build.yml  ci.yml  security.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/api/: client.js
dashboard/src/components/: AgentTimeline.jsx  CategoryBadge.jsx  Layout.jsx  ReleaseRiskWidget.jsx  StatusBadge.jsx  VisualRegressionPanel.jsx
dashboard/src/pages/: Agents.jsx  Dashboard.jsx  FailureDetail.jsx  Failures.jsx  Releases.jsx  Settings.jsx
dashboard/src/theme/: ThemeContext.jsx
scripts/: cleanup_duplicate_failures.py  e2e_smoke.py  seed_db.py  simulate_webhook.py  verify_jira_ticket.py
src/agents/: orchestrator.py  state.py
src/agents/nodes/: duplicate_detector.py  environment_health.py  failure_classifier.py  flaky_detector.py  heal_suggester.py  learner.py  log_analyzer.py  notifier.py  pipeline_monitor.py  release_scorer.py  rerun_trigger.py  root_cause.py  run_tracking.py  ticket_creator.py  visual_analyzer.py
src/agents/prompts/: analyzer_prompt.py  classifier_prompt.py  heal_suggester_prompt.py  release_scorer_prompt.py  root_cause_prompt.py  ticket_prompt.py  visual_analyzer_prompt.py
src/agents/tools/: github_tools.py  jenkins_tools.py  jira_tools.py  log_tools.py  slack_tools.py  vector_tools.py
src/api/: app.py  dependencies.py  middleware.py
src/api/routes/: agents.py  dashboard.py  failures.py  health.py  releases.py  webhooks.py
src/config/: constants.py  logging_config.py  settings.py
src/db/: qdrant_client.py  session.py
src/db/migrations/: env.py
src/db/repositories/: agent_run_repo.py  classification_repo.py  error_signature_repo.py  failure_repo.py  flakiness_repo.py  heal_suggestion_repo.py  notification_repo.py  pipeline_repo.py  release_score_repo.py  rerun_repo.py  root_cause_repo.py  screenshot_repo.py  ticket_repo.py
src/integrations/: base.py
src/integrations/github_actions/: client.py  parser.py  webhook_handler.py
src/integrations/jenkins/: client.py  parser.py  webhook_handler.py
src/integrations/jira/: client.py  mapper.py
src/integrations/slack/: client.py  message_builder.py
src/models/: __init__.py  agent_run.py  base.py  error_signature.py  failure_classification.py  heal_suggestion.py  notification.py  pipeline_event.py  release_score.py  rerun_request.py  root_cause_analysis.py  test_failure.py  test_screenshot.py  triage_ticket.py
src/observability/: __init__.py  metrics.py  tracing.py
src/schemas/: agent_schemas.py  failure_schemas.py  webhook_payloads.py
src/services/: failure_service.py  release_service.py  screenshot_service.py  triage_service.py  webhook_service.py
src/workers/: celery_app.py  tasks.py
tests/: conftest.py
tests/factories/: __init__.py  agent_run_factory.py  classification_factory.py  failure_factory.py  heal_suggestion_factory.py  pipeline_factory.py  root_cause_factory.py  triage_ticket_factory.py
tests/fixtures/: github_actions_webhook.json  jenkins_webhook.json  sample_build_log.txt
tests/integration/: conftest.py  test_agent_runs_api.py  test_dashboard_api.py  test_e2e_smoke.py  test_end_to_end_triage.py  test_failure_api.py  test_failures_api.py  test_failures_api_sprint8.py  test_phase3_api.py  test_release_api.py  test_root_cause_api.py  test_screenshot_api.py  test_triage_pipeline.py  test_webhook_endpoint.py
tests/unit/: test_health.py  test_metrics_instrumentation.py  test_rate_limiting.py  test_vector_tools.py
tests/unit/agents/: test_duplicate_detector.py  test_environment_health.py  test_failure_classifier.py  test_flaky_detector.py  test_heal_suggester.py  test_learner.py  test_log_analyzer.py  test_notifier.py  (+8 more)
(+22 files in other folders)
