[project]
name = "autonomous-qa"
version = "0.1.0"
description = "AI-powered autonomous QA failure triage agent platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Config
    "pydantic-settings>=2.6.0",
    # Logging
    "structlog>=24.4.0",
    # Cache & task queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    # AI / Agent framework
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    # HTTP client
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# FastAPI Query()/Depends() in function-default position is the standard pattern (B008)
"src/api/routes/*.py" = ["B008"]
# Prompt strings are intentionally long for LLM readability (E501)
"src/agents/prompts/*.py" = ["E501"]
# Tests: long assertion strings (E501), PascalCase Mock names (N806)
"tests/**/*.py" = ["E501", "N806"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
# Gradual typing: require annotations on new code but not legacy code
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_ignores = false
# Keep important correctness checks
disallow_any_generics = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
